--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
   </head>
   <body>
-    <video src="video.mp4" controls autoplay playsinline></video>
+    <video src="https://drive.google.com/uc?export=download&id=1BfG-yw5_Z_BLb7Xp17_h_GKHlkQoV3B8" controls autoplay muted playsinline></video>
     <script>
       // Try to lock orientation
       if (screen.orientation && screen.orientation.lock) {
